Fix snackbar notifications not showing up on iOS (#642)

--- a/src/base-styles.css
+++ b/src/base-styles.css
@@ -13,7 +13,6 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 13px;
   line-height: 20px;
-  -webkit-overflow-scrolling: touch;
 }
 
 .iphone-notch-top-spacing {
